Change the way of displaying specifications links

--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -1,7 +1,8 @@
+import { Card, Cards } from 'theme'
+
 # Cahier des charges
 
 ## Fonctionnalités à choisir
-
 
 - [ ]  Compatibilité avec le protocole vanilla
     - [ ]  ce layer doit-il être un module ? (du genre traduction la polymer?)
@@ -21,11 +22,37 @@
 - [ ]  Écrire notre propre ECS ou utiliser bevy ?
 
 
-* [Micro-Services](specifications/micro-services)
-* [Projets](specifications/projects)
-* [Base de connaissance](specifications/knowledge-base)
-* [Points techniques](specifications/technical-points)
-* [Nomenclature](specifications/nomenclature)
-* [Génération des mondes](specifications/world-gen)
-* [Chunks](specifications/chunks)
-* [Blocs](specifications/blocks)
+<Cards>
+  <Card
+    title="Micro-Services"
+    href="specifications/micro-services"
+  />
+  <Card
+    title="Projets"
+    href="specifications/projects"
+  />
+  <Card
+    title="Base de connaissances"
+    href="specifications/knowledge-base"
+  />
+  <Card
+    title="Points techniques"
+    href="specifications/technical-points"
+  />
+  <Card
+    title="Nomenclature"
+    href="specifications/nomenclature"
+  />
+  <Card
+    title="Génération des mondes"
+    href="specifications/world-gen"
+  />
+  <Card
+    title="Chunks"
+    href="specifications/chunks"
+  />
+  <Card
+    title="Blocs"
+    href="specifications/blocks"
+  />
+</Cards>
