Update knowledge-base todo-list

--- a/src/pages/specifications/knowledge-base.mdx
+++ b/src/pages/specifications/knowledge-base.mdx
@@ -5,4 +5,5 @@
     - [ ]  serveurs
     - [ ]  docs
 - [x]  la nouvelle base de connaissance (pour remplacer notion)
+    - [ ]  ajouter les icones avec nextra
 - [x]  dev blog
