docs: :memo: Update documentation to remove unnecessary content
Update documentation to remove unnecessary content and add some very utils extensions for Visual Studio Code and IntelliJ IDEA

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra/components'
+
 # Introduction
 
 Bienvenue sur Archipel Project ! Ce site sert de base de connaissance pour rassembler toutes les informations et ressources nécessaire
@@ -21,30 +23,27 @@ Le projet est hébergé sur [Github](https://github.com/archipel-project). Il es
 
 ## Comment contribuer ?
 
-Pour contribuer au projet [Archipel](https://github.com/archipel-project), vous devez [fork](https://docs.github.com/en/get-started/quickstart/fork-a-repo) ce qui vous permettra d'avoir le repository sur votre compte GitHub sur lequel vous pourrez effectuer tous les modifications que vous voulez. Une fois les modifications faites, vous devrez faire une [pull request](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests) qui sera analysée et si les modifications nous conviennent, elles seront [merge](https://docs.github.com/en/repositories/configuring-branches-and-merges-in-your-repository/configuring-pull-request-merges/about-merge-methods-on-github) sur notre GitHub.
+Pour contribuer au projet [Archipel](https://github.com/archipel-project), vous devez faire un [fork](https://docs.github.com/en/get-started/quickstart/fork-a-repo) 
+sur votre compte GitHub du dépôts qui vous intéresse. Une fois les modifications faites, vous devrez faire une Pull Request qui sera analysée.
 
-### Exemple de contribution
+### Éditeurs recommandés
 
-Pour que les contributions soient plus simples, vous pouvez utiliser [GitHub Desktop](https://desktop.github.com) qui contient toutes les fonctionnalités de GitHub en CLI mais avec une interface graphique.
+Nous vous recommandons d'utiliser un des éditeurs suivants avec les plugins associés :
+* [Visual Studio Code](https://code.visualstudio.com)
+    * [EditorConfig](https://marketplace.visualstudio.com/items?itemName=EditorConfig.EditorConfig)
+    * [Rust Analyzer](https://marketplace.visualstudio.com/items?itemName=matklad.rust-analyzer)
+    * [Crates](https://marketplace.visualstudio.com/items?itemName=serayuzgur.crates)
+    * [Even Better TOML](https://marketplace.visualstudio.com/items?itemName=tamasfe.even-better-toml)
+    * [TODO Highlight](https://marketplace.visualstudio.com/items?itemName=wayou.vscode-todo-highlight)
+    * [Conventional Commits](https://marketplace.visualstudio.com/items?itemName=vivaxy.vscode-conventional-commits)
 
-**Fork du repository**
+* [IntelliJ IDEA](https://www.jetbrains.com/fr-fr/idea/)
+    * [EditorConfig](https://plugins.jetbrains.com/plugin/7294-editorconfig)
+    * [Rust](https://plugins.jetbrains.com/plugin/8182-rust)
+    * [TOML](https://plugins.jetbrains.com/plugin/8195-toml)
 
-Pour effectuer le fork, rendez-vous sur le repository qui vous interresse (ici [archipel-project/docs](https://github.com/archipel-project/docs)) et cliquez sur **Fork**.
+### Conventions de nommage
 
-![GitHub Fork](../img/fork.png)
-
-![GitHub Forking](../img/forking.png)
-
-Ensuite, cliquez sur **Create fork** et ensuite vous aurez le repository sur votre compte GitHub.
-
-**Édition**
-
-Une fois que vous avez le repository sur votre compte GitHub, [clonez-le](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository?tool=cli). Après l'avoir cloné, ouvrez-le avec votre éditeur de texte/IDE (nous vous reccomandons [Visual Studio Code](https://code.visualstudio.com)). Effectuez vos modifications et faites un [commit](https://docs.github.com/en/pull-requests/committing-changes-to-your-project/creating-and-editing-commits/about-commits). Les commit doivent respecter les [conventions de nommage](https://www.conventionalcommits.org/fr/v1.0.0/).
-
-**Exemple de commit**
-
-`docs: Add contributions documentation`
-
-Ce nom de commit signifie que les ajoute (feat) la documentation sur les contributions.
-
-Le commit devrait se trouver sur votre compte GitHub. Si tel est le cas, effectuez une [pull request](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests).
+<Callout emoji="⚠" type="warning">
+TODO: Rediriger vers la documentation des conventions de nommage/les guidelines
+</Callout>
