refactor: ♻️ move world generation resources into dedicated category

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -44,6 +44,6 @@ Nous vous recommandons d'utiliser un des éditeurs suivants avec les plugins ass
 
 ### Conventions de nommage
 
-<Callout emoji="⚠" type="warning">
+<Callout type="warning">
 TODO: Rediriger vers la documentation des conventions de nommage/les guidelines
 </Callout>
