--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -44,6 +44,18 @@ Nous vous recommandons d'utiliser un des éditeurs suivants avec les plugins ass
 
 ### Conventions de nommage
 
-<Callout type="warning">
-TODO: Rediriger vers la documentation des conventions de nommage/les guidelines
+<Callout type="info">
+Pour contribuer vous devez utiliser les [Conventional Commits](https://www.conventionalcommits.org/fr) pour que tout le monde s'y retrouve.
 </Callout>
+
+#### Exemples
+
+|   Nom    | Utilisation                                                    |
+|----------|----------------------------------------------------------------|
+|  `feat`  | Pour une nouvelle fonctionnalité                               |
+|  `fix`   | Lorsque vous fixez une bug                                     |
+|  `docs`  | Lorsque vous faites de la documentation dans votre code        |
+|  `perf`  | Lorsque vous améliorez les performances du code                |
+| `revert` | Lorsque vous annulez une changement fait dans un ancien commit |
+
+Pour en savoir plus, référez-vous à la documentation des [conventional commits (fr)](https://www.conventionalcommits.org/fr)
