feat: add dedicated page for rust language

--- a/src/pages/specs/nomenclature.mdx
+++ b/src/pages/specs/nomenclature.mdx
@@ -10,9 +10,4 @@ Fichier lua ou shared libs qui contiennent la logique du plugin (blocs, items, e
 
 ## Assets
 
-Ressources supplémentaires utiles pour le plugin :
-
-- Convention commentaires rust : [Comments - The Rust Reference](https://doc.rust-lang.org/reference/comments.html)
-- Conventions nommage rust : 
-    - [Rust #5: Naming conventions](https://dev.to/cthutu/rust-5-naming-conventions-3cjf)
-    - [Naming - Rust API Guidelines](https://rust-lang.github.io/api-guidelines/naming.html)
+Ressources supplémentaires utiles pour le plugin
