docs: Update conventions doc page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,7 +7,7 @@ au développement du projet.
 
 ## Qu'est ce qu'Archipel Project ?
 
-TODO
+Archipel est un projet visant à implémenter un serveur Minecraft de manière plus optimisée et rapide sous forme de micro services. [En savoir plus](https://archipel-project.github.io/dev-blog) sur le projet Archipel.
 
 ## Où se trouve le projet ?
 
@@ -41,21 +41,3 @@ Nous vous recommandons d'utiliser un des éditeurs suivants avec les plugins ass
     * [EditorConfig](https://plugins.jetbrains.com/plugin/7294-editorconfig)
     * [Rust](https://plugins.jetbrains.com/plugin/8182-rust)
     * [TOML](https://plugins.jetbrains.com/plugin/8195-toml)
-
-### Conventions de nommage
-
-<Callout type="info">
-Pour contribuer vous devez utiliser les [Conventional Commits](https://www.conventionalcommits.org/fr) pour que tout le monde s'y retrouve.
-</Callout>
-
-#### Exemples
-
-|   Nom    | Utilisation                                                    |
-|----------|----------------------------------------------------------------|
-|  `feat`  | Pour une nouvelle fonctionnalité                               |
-|  `fix`   | Lorsque vous fixez une bug                                     |
-|  `docs`  | Lorsque vous faites de la documentation dans votre code        |
-|  `perf`  | Lorsque vous améliorez les performances du code                |
-| `revert` | Lorsque vous annulez une changement fait dans un ancien commit |
-
-Pour en savoir plus, référez-vous à la documentation des [conventional commits (fr)](https://www.conventionalcommits.org/fr)
