--- a/src/pages/specs.mdx
+++ b/src/pages/specs.mdx
@@ -28,42 +28,42 @@ import { GalleryVerticalEnd } from 'lucide-react'
     <Card
       icon={<GalleryVerticalEnd />}
       title="Micro-Services"
-      href="specifications/micro-services"
+      href="specs/micro-services"
     />
     <Card
       icon={<GalleryVerticalEnd />}
       title="Projets"
-      href="specifications/projects"
+      href="specs/projects"
     />
     <Card
       icon={<GalleryVerticalEnd />}
       title="Base de connaissances"
-      href="specifications/knowledge-base"
+      href="specs/knowledge-base"
     />
     <Card
       icon={<GalleryVerticalEnd />}
       title="Points techniques"
-      href="specifications/technical-points"
+      href="specs/technical-points"
     />
     <Card
       icon={<GalleryVerticalEnd />}
       title="Nomenclature"
-      href="specifications/nomenclature"
+      href="specs/nomenclature"
     />
     <Card
       icon={<GalleryVerticalEnd />}
       title="Génération des mondes"
-      href="specifications/worlds-gen"
+      href="specs/worlds-gen"
     />
     <Card
       icon={<GalleryVerticalEnd />}
       title="Chunks"
-      href="specifications/chunks"
+      href="specs/chunks"
     />
     <Card
       icon={<GalleryVerticalEnd />}
       title="Blocs"
-      href="specifications/blocks"
+      href="specs/blocks"
     />
   </Cards>
 </div>
