refactor: Spelling mistakes correction

--- a/src/pages/conventions/git.mdx
+++ b/src/pages/conventions/git.mdx
@@ -7,7 +7,7 @@ Pour contribuer au projet, vous devrez respecter quelques conventions.
 
 ## Conventions de nommage
 
-Pour écrire nos messages de commit, nous suivons les spécification [Conventional Commits](https://www.conventionalcommits.org/fr)
+Pour écrire nos messages de commit, nous suivons les spécifications [Conventional Commits](https://www.conventionalcommits.org/fr)
 afin de maintenir une cohérence dans nos commits.
 
 ### Exemples
