--- a/src/pages/specs.mdx
+++ b/src/pages/specs.mdx
@@ -6,14 +6,14 @@ import { GalleryVerticalEnd } from 'lucide-react'
 ## Fonctionnalités à choisir
 
 - [ ]  Compatibilité avec le protocole vanilla
-    - [ ]  ce layer doit-il être un module ? (du genre traduction la polymer?)
-    - [ ]  utilisation de raknetify ?
+    - [ ]  Ce layer doit-il être un module ? (du genre traduction la polymer?)
+    - [ ]  Utilisation de raknetify ?
 - [ ]  Pas de limitations techniques sur la high limit
 - [x]  Écrit en Rust
-- [ ]  Dois pouvoir être multithreadable/mutli threadé (voire async ?)
+- [ ]  Doit pouvoir être multithreadable/mutli threadé (voire async ?)
 - [ ]  Light engine
-- [ ]  Dois supporter des add-ons (le contenu de Minecraft vanilla pourrait être lui-même un add-on, le soft du serveur n'étant qu'un moteur à “Minecraft”)
-- [ ]  Support de plugins (voir Nomenclature):
+- [ ]  Doit supporter des add-ons (le contenu de Minecraft vanilla pourrait être lui-même un add-on, le soft du serveur n'étant qu'un moteur à “Minecraft”)
+- [ ]  Support de plugins (voir [Nomenclature](/specs/nomenclature)):
     - [ ]  lib dynamique
     - [ ]  en lua
     - [ ]  en wren
