feat: tweak CSS, CI build for PRs and more resources

--- a/src/pages/specs.mdx
+++ b/src/pages/specs.mdx
@@ -62,7 +62,7 @@ import { GalleryVerticalEnd } from 'lucide-react'
     />
     <Card
       icon={<GalleryVerticalEnd />}
-      title="Blocs"
+      title="Blocks"
       href="specs/blocks"
     />
   </Cards>
