--- a/src/pages/specs/nomenclature.mdx
+++ b/src/pages/specs/nomenclature.mdx
@@ -6,7 +6,7 @@ Archive/dossier contenant l’ensemble des ressources nécessaires pour charger 
 
 ## Modules
 
-Fichier lua ou shared libs qui contiennent la logique du plugin (blocs, items, etc.)
+Fichier lua ou shared libs qui contiennent la logique du plugin (blocks, items, etc.)
 
 ## Assets
 
