--- a/src/pages/specs/blocks.mdx
+++ b/src/pages/specs/blocks.mdx
@@ -1,6 +1,6 @@
-# Blocs
+# Blocks
 
-- un bloc placé n’est qu'un entier sur 4 bytes (son id) dans un chunk
-- plusieurs variations d'un bloc sont des blocs différents, il n'y a pas de système de metadata à part les tile entity
-- les fonctions associés aux blocs (tick, update, on break, etc) sont toutes stockées dans un array, l'id du bloc devra être utilisée comme index pour récupérer ces fonctions
-- il doit être possible de créer des blocs avec une plage d'id contiguë pour tester facilement si un bloc fait partie d'un groupe (s'il est compris dans la plage d'id), utile pour gérer des variations d'un block (redstone, piston, escalier, blocs waterlogged, etc)
+- un block placé n’est qu'un entier sur 4 bytes (son id) dans un chunk
+- plusieurs variations d'un block sont des blocks différents, il n'y a pas de système de metadata à part les tile entity
+- les fonctions associés aux blocks (tick, update, on break, etc) sont toutes stockées dans un array, l'id du block devra être utilisée comme index pour récupérer ces fonctions
+- il doit être possible de créer des blocks avec une plage d'id contiguë pour tester facilement si un block fait partie d'un groupe (s'il est compris dans la plage d'id), utile pour gérer des variations d'un block (redstone, piston, escalier, blocks waterlogged, etc)
