--- a/src/pages/specs/chunks.mdx
+++ b/src/pages/specs/chunks.mdx
@@ -1,14 +1,14 @@
 # Chunks
 
-- Un chunk est une unité de 16×16×16 blocs, soit 4096 blocs au total, il contient:
+- Un chunk est une unité de 16×16×16 blocks, soit 4096 blocks au total, il contient:
     - ses propres coordonnées relatives dans le monde
     - des flags (voir plus bas)
-    - les id des blocs qui le compose
+    - les id des blocks qui le compose
     - un array de 2048 octets pour les données de lumière (soit 4 bits par niveau de lumière)
     - la liste des (id) entités (+tileEntity ?) qui s'y trouvent.
-- Il doit toujours avoir une taille statique en mémoire, cependant n'avoir aucune forme de compression serait une énorme perte d'espace (il y a beaucoup de chunks composés d'à peine une dizaine de blocs, voir que d'un bloc uniquement), afin de palier à ce problème, 2 implémentations d'un chunks :
-    - une version compressée avec une palette qui traduit les blocs sur 4 bits
-    - la représentation sur 4 bytes (cela permet de diviser par deux là taille d'un chunks en mémoire pour des id globaux d'un bloc sur 1 octet, par 4 si les blocs sont représentés sur 2 octets).
+- Il doit toujours avoir une taille statique en mémoire, cependant n'avoir aucune forme de compression serait une énorme perte d'espace (il y a beaucoup de chunks composés d'à peine une dizaine de blocks, voir que d'un block uniquement), afin de palier à ce problème, 2 implémentations d'un chunks :
+    - une version compressée avec une palette qui traduit les blocks sur 4 bits
+    - la représentation sur 4 bytes (cela permet de diviser par deux là taille d'un chunks en mémoire pour des id globaux d'un block sur 1 octet, par 4 si les blocks sont représentés sur 2 octets).
 - Un chunk dois porter en en-tête les flags suivant :
     - est-ce un chunk null (un simple trou dans le vecteur de stockage qui peut être refill
     - est-ce qu'il y a besoin d'appliquer du random-tick speed
