fix: typos and precisions about bedrock protocol

--- a/src/pages/resources/networking.mdx
+++ b/src/pages/resources/networking.mdx
@@ -5,10 +5,10 @@ Il est donc nécessaire de comprendre comment fonctionne ce protocole pour pouvo
 
 ## Protocoles
 
-La version Java se sert d'un protocol se servant de TCP: 
+La version Java se sert d'un protocole se servant de TCP: 
 - https://wiki.vg/Protocol
 
-Tandis que la version Bedrock se sert d'un protocol se servant de UDP, inspiré de Raknet:
+Tandis que la version Bedrock se sert du protocole Raknet passant par UDP:
 - https://wiki.vg/Bedrock_Protocol
 - https://wiki.vg/Raknet_Protocol
 
