feat: add client to project list

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -18,6 +18,8 @@ Le projet est hébergé sur [Github](https://github.com/archipel-project). Il es
 * [Core](https://github.com/archipel-project/core)
 * [Storage](https://github.com/archipel-project/storage)
 * [Tools](https://github.com/archipel-project/tools)
+* [Client](https://github.com/archipel-project/client): client de débug pour le projet
+* [mc-packet-lib](https://github.com/archipel-project/mc-packet-lib)
 * [Documentation](https://github.com/archipel-project/docs)
 * [Dev blog](https://github.com/archipel-project/dev-blog)
 
