--- a/src/pages/specs/projects.mdx
+++ b/src/pages/specs/projects.mdx
@@ -54,6 +54,11 @@ jeu de base au complet (overworld, nether, end).
 Le manager sera là pour chapoter les différents services et garder une cohésion. C'est par le biais de ce dernier qu'il sera possible de gérer l'infrastructure du serveur.
 (joueurs, mondes, nodes, backups, etc.)
 
+### Client
+
+Le client est un outil graphique que nous allons développer pour nous aider à analyser la stack réseau des serveurs Minecraft ainsi que des données qui transitent avec le client.
+Cela nous permettra de mieux comprendre le fonctionnement du jeu et de pouvoir développer plus facilement la logique du jeu.
+
 ## Diagramme de relation des services
 
 ```mermaid
