fix: typos and spelling

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -2,12 +2,12 @@ import { Callout } from 'nextra/components'
 
 # Introduction
 
-Bienvenue sur Archipel Project ! Ce site sert de base de connaissance pour rassembler toutes les informations et ressources nécessaire
+Bienvenue sur Archipel Project ! Ce site sert de base de connaissance pour rassembler toutes les informations et ressources nécessaires
 au développement du projet.
 
 ## Qu'est ce qu'Archipel Project ?
 
-Archipel est un projet visant à implémenter un serveur Minecraft de manière plus optimisée et rapide sous forme de micro services. [En savoir plus](https://archipel-project.github.io/dev-blog) sur le projet Archipel.
+Archipel est un projet visant à implémenter un serveur Minecraft de manière plus optimisée et rapide sous forme de microservices. [En savoir plus](https://archipel-project.github.io/dev-blog) sur le projet Archipel.
 
 ## Où se trouve le projet ?
 
@@ -18,7 +18,7 @@ Le projet est hébergé sur [Github](https://github.com/archipel-project). Il es
 * [Core](https://github.com/archipel-project/core)
 * [Storage](https://github.com/archipel-project/storage)
 * [Tools](https://github.com/archipel-project/tools)
-* [Client](https://github.com/archipel-project/client): client de débug pour le projet
+* [Client](https://github.com/archipel-project/client) : client de débug pour le projet
 * [mc-packet-lib](https://github.com/archipel-project/mc-packet-lib)
 * [Documentation](https://github.com/archipel-project/docs)
 * [Dev blog](https://github.com/archipel-project/dev-blog)
@@ -26,7 +26,7 @@ Le projet est hébergé sur [Github](https://github.com/archipel-project). Il es
 ## Comment contribuer ?
 
 Pour contribuer au projet [Archipel](https://github.com/archipel-project), vous devez faire un [fork](https://docs.github.com/en/get-started/quickstart/fork-a-repo) 
-sur votre compte GitHub du dépôts qui vous intéresse. Une fois les modifications faites, vous devrez faire une Pull Request qui sera analysée.
+sur votre compte GitHub du dépôt qui vous intéresse. Une fois les modifications faites, vous devrez faire une Pull Request qui sera analysée.
 
 ### Éditeurs recommandés
 
