--- a/src/pages/specs/nomenclature.mdx
+++ b/src/pages/specs/nomenclature.mdx
@@ -2,12 +2,12 @@
 
 ## Plugins
 
-Archive/dossier contenant l’ensemble des ressources nécessaires pour charger un projet
+Archive/dossier contenant l’ensemble des ressources nécessaires pour charger un projet.
 
 ## Modules
 
-Fichier lua ou shared libs qui contiennent la logique du plugin (blocks, items, etc.)
+Fichier lua ou shared libs qui contiennent la logique du plugin (blocs, items, etc.).
 
 ## Assets
 
-Ressources supplémentaires utiles pour le plugin
+Ressources supplémentaires utiles pour le plugin.
