--- a/src/pages/specs/projects.mdx
+++ b/src/pages/specs/projects.mdx
@@ -29,7 +29,7 @@ Cet outil permettra d'importer et d'exporter des mondes Minecraft en les convert
 ### Proxy
 
 Le proxy est le point d'entrée pour les joueurs. Ils pourront accéder au serveur de jeu en se connectant dessus.
-Ce proxy gèrera la connexion des joueurs, leur authentification et s'occupera d'accéder au bon worker en fonction du monde demandé.
+Ce proxy gérera la connexion des joueurs, leur authentification et s'occupera d'accéder au bon worker en fonction du monde demandé.
 
 ### Authentification
 
@@ -51,8 +51,8 @@ jeu de base au complet (overworld, nether, end).
 
 ### Manager
 
-Le manager sera là pour chapoter les différents services et garder une cohésion. C'est par le biais de ce dernier qu'il sera possible de gérer l'infrastructure du serveur.
-(joueurs, mondes, nodes, backups, etc.)
+Le manager sera là pour chapeauter les différents services et garder une cohésion. C'est par le biais de ce dernier qu'il sera possible de gérer l'infrastructure du serveur
+(joueurs, mondes, nodes, backups, etc.).
 
 ### Client
 
