--- a/src/pages/conventions/git.mdx
+++ b/src/pages/conventions/git.mdx
@@ -56,5 +56,6 @@ Ce modèle est composé de 5 branches principales/types :
 
 ### Pourquoi utiliser Git Flow ?
 
-Git Flow offre une meilleur compréhension de chaques parties du projet et de suivre l'avancée d'une partie spécifique. Dans une branche `dev` on fait tous les commits et lorsque le tout fonctionne,
-on merge la branche sur la branche `main` ce qui nuie à la compréhension.
+Git Flow permet, grâce à l'utilisation de deux branches principales, une meilleure organisation de projet.
+La première branche, nommée main, correspond à la version du code stable, utilisable en production.
+La seconde, nommée dev, correspond à la version en cours de développement et est donc la branche de travail.
