--- a/src/pages/conventions/git.mdx
+++ b/src/pages/conventions/git.mdx
@@ -19,7 +19,7 @@ afin de maintenir une cohérence dans nos commits.
 | `docs`     | Quand seul la documentation du code change                                     |
 | `perf`     | Changement de code améliorant les performances                                 |
 | `revert`   | Annule un commit précédent                                                     |
-| `style`    | Changement de style (indentation, espaces, etc)                                |
+| `style`    | Changement de style (indentation, espaces, etc.)                                |
 | `test`     | Ajout ou modification de tests                                                 |
 | `refactor` | Changement de code qui n'ajoute pas de fonctionnalité ou de correction de bug  |
 | `ci`       | Changement dans les fichiers et scripts de configuration de CI (Github Action) |
