--- a/src/pages/specs/blocks.mdx
+++ b/src/pages/specs/blocks.mdx
@@ -2,5 +2,5 @@
 
 - un bloc placé n’est qu'un entier sur 4 bytes (son id) dans un chunk
 - plusieurs variations d'un bloc sont des blocs différents, il n'y a pas de système de metadata à part pour les tile entity
-- les fonctions associées aux blocs (tick, update, on break, etc) sont toutes stockées dans un array, l'id du bloc devra être utilisé comme index pour récupérer ces fonctions
-- il doit être possible de créer des blocs avec une plage d'id contiguë pour tester facilement si un bloc fait partie d'un groupe (s'il est compris dans la plage d'id), ce qui est utile pour gérer les variations d'un bloc (redstone, piston, escalier, blocs waterlogged, etc)
+- les fonctions associées aux blocs (tick, update, on break, etc.) sont toutes stockées dans un array, l'id du bloc devra être utilisé comme index pour récupérer ces fonctions
+- il doit être possible de créer des blocs avec une plage d'id contiguë pour tester facilement si un bloc fait partie d'un groupe (s'il est compris dans la plage d'id), ce qui est utile pour gérer les variations d'un bloc (redstone, piston, escalier, blocs waterlogged, etc.)
